# rspack

crates/node_binding/: binding.d.ts
crates/rspack_binding_options/: Cargo.toml
crates/rspack_binding_options/src/options/raw_builtins/: mod.rs
crates/rspack_core/src/: chunk.rs  chunk_group.rs  runtime.rs
crates/rspack_core/src/chunk_graph/: chunk_graph_chunk.rs
crates/rspack_core/src/options/: builtins.rs
crates/rspack_database/src/: database.rs
crates/rspack_plugin_limit_chunk_count/: Cargo.toml
crates/rspack_plugin_limit_chunk_count/src/: chunk_combination.rs  lazy_bucket_sorted_set copy.rs  lazy_bucket_sorted_set.rs  lib.rs
crates/rspack_util/: Cargo.toml
crates/rspack_util/src/: comparators.rs
examples/basic/: rspack.config.js
