[package]
edition    = "2021"
license    = "MIT"
name       = "rspack_util"
repository = "https://github.com/web-infra-dev/rspack"
version    = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools         = { workspace = true }
once_cell         = { workspace = true }
regex             = { workspace = true }
rspack_identifier = { path = "../rspack_identifier" }
rustc-hash        = { workspace = true }
sugar_path        = { workspace = true }
